Fixed logo cut off

--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -7,7 +7,6 @@ body {
 }
 
 
-
 .top-header-right p {
     display: inline-block;
     text-align: center;
@@ -33,11 +32,15 @@ body {
     justify-content: center;
 }
 
+img {
+    z-index: 3;
+}
+
+
 @media screen and (max-width: 2000px) and (min-width: 600px) {
 
 
     .top-header {
-        z-index: 2;
         position: fixed;
         top: 0;
         left: 0;
@@ -54,6 +57,7 @@ body {
         justify-content: center;
         flex: 1 1 40%;
         min-width: 50ch;
+        z-index: -1;
     }
     
     .top-header-left {  
@@ -76,6 +80,7 @@ body {
 
     img {
         width: 100%;
+        height: 100%;
     }
 
     .infomation {
@@ -226,8 +231,8 @@ input[type="text"]:hover, input[type="email"]:hover, textarea:hover {
 
     #open {
         display: block;
-        z-index: 2;
         position: fixed;
+        z-index: 5;
         top: 5px;
         right: 10px;
         color: white;
@@ -246,10 +251,10 @@ input[type="text"]:hover, input[type="email"]:hover, textarea:hover {
         height: 100%;
         width: 0;
         position: fixed;
-        z-index: 3;
         top: 0;
         left: 0;
         background-color: black;
+        z-index: 6;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
@@ -327,6 +332,7 @@ input[type="text"]:hover, input[type="email"]:hover, textarea:hover {
         width: 100%;
     }
 }
+
 
 .footer {
     position: absolute;
